Fixing overlapping map legend issue

--- a/dplace_app/static/css/dplace.css
+++ b/dplace_app/static/css/dplace.css
@@ -238,12 +238,6 @@ label.light {
     cursor: hand;
 }
 
-.map-legend {
-    position: absolute;
-    margin-top: -290px;
-    margin-left: 800px;
-}
-
 .circle {
     border-radius: 50%;
     border: 1px solid darkgray;
